cleaning up package.json and index.html

--- a/index.html
+++ b/index.html
@@ -268,8 +268,8 @@
                     <!--
                     <div class="hero__video-container">
                         <video autoplay loop id="bg-video">
-                            <source src="assets/vid/bg-vid.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-                            <source src="assets/vid/bg-vid.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+                            <source src="assets/vid/bg-vid.webm" type="video/webm" />Your browser does not support the video tag.
+                            <source src="assets/vid/bg-vid.mp4" type="video/mp4" />Your browser does not support the video tag.
                         </video>
                         <div class="hero__video-poster">
                             <img src="assets/vid/bg-vid.jpg" alt="">
