--- a/index.html
+++ b/index.html
@@ -34,12 +34,6 @@
         <!-- Vendor CSS: Pikaday -->
         <link rel="stylesheet" href="assets/vendor/pikaday.css" type="text/css" media="all" />
 
-        <!-- Vendor CSS: Photoswipe Core -->
-        <link rel="stylesheet" href="assets/vendor/photoswipe/photoswipe.css" type="text/css" media="all" />
-
-        <!-- Vendor CSS: Photoswipe Default Skin -->
-        <link rel="stylesheet" href="assets/vendor/photoswipe/default-skin/default-skin.css" type="text/css" media="all" />
-
         <!-- Primary Stylesheet -->
         <link rel="stylesheet" href="assets/css/style.css" type="text/css" media="all">
 
@@ -709,6 +703,10 @@
                 </div>
             </section>
 
+            <div class="test-bar sticky" style="padding: 1rem;border: 1px solid #ccc;border-width: 1px 0;background: white;">
+                This is a sticky bar.
+            </div>
+
             <!-- Forms -->
             <section class="page-section">
                 <div class="container--medium">
@@ -822,9 +820,7 @@
                                 <li id="field_596_11" class="gfield field_sublabel_below field_description_below gfield_visibility_visible">
                                     <label class="gfield_label" for="input_596_11">File Upload</label>
                                     <div class="ginput_container ginput_container_fileupload"><input type="hidden" name="MAX_FILE_SIZE" value="134217728">
-                                        <input name="input_10" id="input_1_10" type="file" class="medium" aria-describedby="extensions_message" onchange="javascript:gformValidateFileSize( this, 134217728 );" tabindex="15">
-                                        <span id="extensions_message" class="file-input__types screen-reader-text">Accepted file types: jpg, png, jpeg, gif.</span>
-                                        <div class="validation-message"></div>
+                                        <input name="input_10" id="input_1_10" type="file" multiple>
                                     </div>
                                 </li>
                                 <li id="field_596_2" class="gfield gfield_contains_required field_sublabel_below field_description_below gfield_visibility_visible">
@@ -1042,20 +1038,11 @@
         <!-- Vendor Script: Pikaday -->
         <script type="text/javascript" src="assets/vendor/pikaday.js"></script>
 
-        <!-- Vendor Script: Photoswipe Core -->
-        <script type="text/javascript" src="assets/vendor/photoswipe/photoswipe.min.js"></script>
-
-        <!-- Vendor Script: Photoswipe Core -->
-        <script type="text/javascript" src="assets/vendor/photoswipe/photoswipe-ui-default.min.js"></script>
-
         <!-- Core Script: Base -->
         <script type="text/javascript" src="assets/js/core.js"></script>
 
         <!-- Component Script: Icons -->
         <script type="text/javascript" src="assets/js/components/icons/icons.js"></script>
-
-        <!-- Component Script: Header -->
-        <script type="text/javascript" src="assets/js/components/header/header.js"></script>
 
         <!-- Component Script: Alerts -->
         <script type="text/javascript" src="assets/js/components/alerts/alerts.js"></script>
