fixing gallery open, file inputs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- Use realfavicongenerator.net -->
 
         <!-- Vendor Dependencies -->
-        <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json -->
+        <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json. See documentation. -->
 
         <!-- jQuery -->
         <script type="text/javascript" src="assets/vendor/jquery.min.js"></script>
@@ -1106,6 +1106,7 @@
                     <use xlink:href="#core-icon--close"></use>
                 </svg>
             </a>
+            <!-- Slides -->
             <div class="gallery__slides">
                 <div class="gallery__slide">
                     <img src="http://unsplash.it/768/250" alt="" class="gallery__item-image--full">
@@ -1118,6 +1119,9 @@
                 </div>
                 <div class="gallery__slide">
                     <img src="http://unsplash.it/800/1440" alt="" class="gallery__item-image--full">
+                </div>
+                <div class="gallery__slide">
+                    <img src="http://unsplash.it/700/1220" alt="" class="gallery__item-image--full">
                 </div>
             </div>
         </div>
