minor updates to template

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- TRANSLATION-ITEM: Update lang attribute if necessary. -->
 <html class="no-js" lang="en">
 
     <head>
@@ -12,6 +13,7 @@
 
         <!-- Fonts -->
         <!-- Use Google Fonts or Typekit -->
+        <!-- Typekit now supports <link>. This method is preferred over JS inclusion. -->
 
         <!-- Favicons -->
         <!-- Use realfavicongenerator.net -->
