bug fix: search form button

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <p class="sidebar-nav__pane-content sidebar-nav__search-form-content">Id amet velit sit proident pariatur ea sunt qui consequat reprehenderit quis in.</p>
             <form class="sidebar-nav__search-form">
                 <input type="text" class="sidebar-nav__search-input" placeholder="What can we help you find today?">
-                <button class="sidebar-nav__search-button button--basic">Search</a>
+                <button class="sidebar-nav__search-button button--basic">Search</button>
             </form>
         </div>
 
