feature update: sidebar navigation logo and pane indicators

--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <!-- Sidebar Menu -->
         <div class="sidebar-nav__overlay"></div>
         <ul class="sidebar-nav tab-bar--4-up">
+            <li class="sidebar-nav__item--logo">
+                <a href="/" class="sidebar-nav__item-link">
+                    <img src="http://placehold.it/250x150" alt="Logo">
+                </a>
+            </li>
             <li class="sidebar-nav__item in-tab-bar">
                 <a href="#" class="sidebar-nav__item-link" data-sidebar-pane="pane-search">
                     <div class="sidebar-nav__item-icon-wrapper">
