sidebar nav level toggles

--- a/index.html
+++ b/index.html
@@ -159,38 +159,72 @@
         <div class="sidebar-nav__pane--nav" data-sidebar-pane="pane-projects">
             <ul class="sidebar-nav__pane-nav--level-1">
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-2">Category 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-2-a">Category 1A</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Category 2</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-2-b">Category 2B</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Category 3</a>
                 </li>
             </ul>
-            <ul class="sidebar-nav__pane-nav--level-2" data-sidebar-level="level-2">
+            <ul class="sidebar-nav__pane-nav--level-2" data-sidebar-level="level-2-a">
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#" class="sidebar-nav__pane-nav-item-link back">Back</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-3">Project 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-3-a">Project 1A</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1A</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1A</a>
                 </li>
             </ul>
-            <ul class="sidebar-nav__pane-nav--level-3" data-sidebar-level="level-3">
+            <ul class="sidebar-nav__pane-nav--level-2" data-sidebar-level="level-2-b">
                 <li class="sidebar-nav__pane-nav-item">
                     <a href="#" class="sidebar-nav__pane-nav-item-link back">Back</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-3-a">Project 1B</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link" data-sidebar-level="level-3-b">Project 1B</a>
                 </li>
                 <li class="sidebar-nav__pane-nav-item">
-                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1</a>
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1B</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Project 1B</a>
+                </li>
+            </ul>
+            <ul class="sidebar-nav__pane-nav--level-3" data-sidebar-level="level-3-a">
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link back">Back</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1A</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1A</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1A</a>
+                </li>
+            </ul>
+            <ul class="sidebar-nav__pane-nav--level-3" data-sidebar-level="level-3-b">
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link back">Back</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1B</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1B</a>
+                </li>
+                <li class="sidebar-nav__pane-nav-item">
+                    <a href="#" class="sidebar-nav__pane-nav-item-link">Subproject 1B</a>
                 </li>
             </ul>
         </div>
