updating accordion js, upgrading packages

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <!-- If adding a new vendor dependency, please ensure you add it to the 'bond' script in package.json. See documentation. -->
 
         <!-- jQuery -->
-        <script type="text/javascript" src="assets/vendor/jquery.min.js"></script>
+        <script src="assets/vendor/jquery.min.js"></script>
 
         <!-- Modernizr -->
-        <script type="text/javascript" src="assets/vendor/modernizr.js"></script>
+        <script src="assets/vendor/modernizr.js"></script>
 
         <!-- Vendor CSS: Normalize -->
         <link rel="stylesheet" href="assets/vendor/normalize.css" type="text/css" media="all">
@@ -1168,64 +1168,64 @@
         <!-- DEV-NOTE: Analytics Reminder -->
 
         <!-- Vendor Script: MatchMedia -->
-        <script type="text/javascript" src="assets/vendor/matchMedia.js"></script>
+        <script src="assets/vendor/matchMedia.js"></script>
 
         <!-- Vendor Script: Slick -->
-        <script type="text/javascript" src="assets/vendor/slick.js"></script>
+        <script src="assets/vendor/slick.js"></script>
 
         <!-- Vendor Script: Pikaday -->
-        <script type="text/javascript" src="assets/vendor/pikaday.js"></script>
+        <script src="assets/vendor/pikaday.js"></script>
 
         <!-- Vendor Script: Select2 -->
-        <script type="text/javascript" src="assets/vendor/select2.min.js"></script>
+        <script src="assets/vendor/select2.min.js"></script>
 
         <!-- Core Script: Base -->
-        <script type="text/javascript" src="assets/js/core.js"></script>
+        <script src="assets/js/core.js"></script>
 
         <!-- Component Script: Icons -->
-        <script type="text/javascript" src="assets/js/components/icons/icons.js"></script>
+        <script src="assets/js/components/icons/icons.js"></script>
 
         <!-- Component Script: Alerts -->
-        <script type="text/javascript" src="assets/js/components/alerts/alerts.js"></script>
+        <script src="assets/js/components/alerts/alerts.js"></script>
 
         <!-- Component Script: Hero -->
-        <script type="text/javascript" src="assets/js/components/hero/hero.js"></script>
+        <script src="assets/js/components/hero/hero.js"></script>
 
         <!-- Component Script: Content -->
-        <script type="text/javascript" src="assets/js/components/content/content.js"></script>
+        <script src="assets/js/components/content/content.js"></script>
 
         <!-- Component Script: Navigation (Basic) -->
-        <script type="text/javascript" src="assets/js/components/navigation/navigation-basic.js"></script>
+        <script src="assets/js/components/navigation/navigation-basic.js"></script>
 
         <!-- Component Script: Navigation (Sidebar) -->
-        <script type="text/javascript" src="assets/js/components/navigation/navigation-sidebar.js"></script>
+        <script src="assets/js/components/navigation/navigation-sidebar.js"></script>
 
         <!-- Component Script: Pagination -->
-        <script type="text/javascript" src="assets/js/components/pagination/pagination.js"></script>
+        <script src="assets/js/components/pagination/pagination.js"></script>
 
         <!-- Component Script: Accordions -->
-        <script type="text/javascript" src="assets/js/components/accordions/accordions.js"></script>
+        <script src="assets/js/components/accordions/accordions.js"></script>
 
         <!-- Component Script: Tabs -->
-        <script type="text/javascript" src="assets/js/components/tabs/tabs.js"></script>
+        <script src="assets/js/components/tabs/tabs.js"></script>
 
         <!-- Component Script: Social Sharing -->
-        <script type="text/javascript" src="assets/js/components/social/social-sharing.js"></script>
+        <script src="assets/js/components/social/social-sharing.js"></script>
 
         <!-- Component Script: Language -->
-        <script type="text/javascript" src="assets/js/components/language/language-toggle.js"></script>
+        <script src="assets/js/components/language/language-toggle.js"></script>
 
         <!-- Component Script: Forms -->
-        <script type="text/javascript" src="assets/js/components/forms/forms.js"></script>
+        <script src="assets/js/components/forms/forms.js"></script>
 
         <!-- Component Script: Modals -->
-        <script type="text/javascript" src="assets/js/components/dialog/dialog.js"></script>
+        <script src="assets/js/components/dialog/dialog.js"></script>
 
         <!-- Component Script: Datepicker (Pikaday) -->
-        <script type="text/javascript" src="assets/js/components/datepicker/datepicker.js"></script>
+        <script src="assets/js/components/datepicker/datepicker.js"></script>
 
         <!-- Component Script: Gallery -->
-        <script type="text/javascript" src="assets/js/components/gallery/gallery.js"></script>
+        <script src="assets/js/components/gallery/gallery.js"></script>
 
     </body>
 
