updating style, readme

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <!-- Modernizr -->
         <script src="assets/vendor/modernizr.js"></script>
 
+        <!-- Fonts -->
+        <link href="//fonts.googleapis.com/css?family=Roboto:400,400i,700i,900" rel="stylesheet">
+        <link rel="stylesheet" href="//use.typekit.net/urw6fuc.css">
+
         <!-- Vendor CSS: Normalize -->
         <link rel="stylesheet" href="assets/vendor/normalize.css" type="text/css" media="all">
 
@@ -62,7 +66,7 @@
             <li class="sidebar-nav__item in-tab-bar">
                 <a href="#" class="sidebar-nav__item-link" data-sidebar-pane="pane-search">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--search">
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
                             <use xlink:href="#core-icon--search"></use>
                         </svg>
                         <span class="sidebar-nav__item-icon--close"></span>
@@ -73,8 +77,8 @@
             <li class="sidebar-nav__item">
                 <a href="#" class="sidebar-nav__item-link" data-sidebar-pane="pane-about">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--twitter">
-                            <use xlink:href="#core-icon--twitter"></use>
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
+                            <use xlink:href="#core-icon--placeholder"></use>
                         </svg>
                         <span class="sidebar-nav__item-icon--close"></span>
                     </div>
@@ -84,8 +88,8 @@
             <li class="sidebar-nav__item in-tab-bar">
                 <a href="#" class="sidebar-nav__item-link" data-sidebar-pane="pane-projects">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--pinterest">
-                            <use xlink:href="#core-icon--pinterest"></use>
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
+                            <use xlink:href="#core-icon--placeholder"></use>
                         </svg>
                         <span class="sidebar-nav__item-icon--close"></span>
                     </div>
@@ -95,8 +99,8 @@
             <li class="sidebar-nav__item in-tab-bar">
                 <a href="#" class="sidebar-nav__item-link">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--instagram">
-                            <use xlink:href="#core-icon--instagram"></use>
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
+                            <use xlink:href="#core-icon--placeholder"></use>
                         </svg>
                     </div>
                     <span class="sidebar-nav__item-text">Events</span>
@@ -105,8 +109,8 @@
             <li class="sidebar-nav__item">
                 <a href="#" class="sidebar-nav__item-link">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--youtube">
-                            <use xlink:href="#core-icon--youtube"></use>
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
+                            <use xlink:href="#core-icon--placeholder"></use>
                         </svg>
                     </div>
                     <span class="sidebar-nav__item-text">Contact</span>
@@ -115,8 +119,8 @@
             <li class="sidebar-nav__item--language in-tab-bar">
                 <a href="#" class="sidebar-nav__item-link">
                     <div class="sidebar-nav__item-icon-wrapper">
-                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon core-icon--youtube">
-                            <use xlink:href="#core-icon--youtube"></use>
+                        <svg viewBox="0 0 24 24" class="sidebar-nav__item-icon">
+                            <use xlink:href="#core-icon--placeholder"></use>
                         </svg>
                     </div>
                     <span class="sidebar-nav__item-text">English</span>
@@ -295,7 +299,7 @@
             <!-- Hero -->
             <section class="hero">
                 <!-- Slide: With Video -->
-                <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://placehold.it/1920x1080')">
+                <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://picsum.photos/1920/1080?image=435')">
                     <div class="hero__slide-content-container container--small">
                         <h5 class="hero__slide-subtitle">Subtitle</h5>
                         <h1 class="hero__slide-title">Slide Title</h1>
@@ -315,7 +319,7 @@
                     -->
                 </div>
                 <!-- Slide: With Image -->
-                <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://placehold.it/1920x1080')">
+                <div class="hero__slide bg-size--cover bg-pos--center" style="background-image:url('https://picsum.photos/1920/1080?image=435')">
                     <div class="hero__slide-content-container container--small">
                         <h5 class="hero__slide-subtitle">Subtitle</h5>
                         <h1 class="hero__slide-title">Slide Title</h1>
@@ -374,7 +378,7 @@
                         <p>Minim sit ad occaecat ex esse non proident velit ipsum dolore pariatur voluptate. Incididunt est qui commodo veniam officia cupidatat irure voluptate. Sunt quis enim excepteur veniam elit ullamco aliquip <a href="#234234">dolore officia</a> anim aute dolore nostrud consequat officia mollit Lorem. Anim occaecat officia id occaecat nulla ex aliquip quis nostrud magna exercitation sit aliquip. Velit nulla deserunt elit ipsum mollit commodo deserunt esse culpa amet fugiat consectetur cillum officia. Aliquip ea eu eiusmod eu incididunt adipisicing tempor minim aliqua commodo ex. Nisi quis veniam ullamco reprehenderit labore est excepteur voluptate duis Lorem dolore enim culpa tempor proident ea esse.</p>
                         <p>Minim sit ad occaecat ex esse non proident velit ipsum dolore pariatur voluptate. Incididunt est qui commodo veniam officia cupidatat irure voluptate. Sunt quis enim excepteur veniam elit ullamco aliquip dolore officia anim aute dolore nostrud consequat officia mollit Lorem.</p>
                         <blockquote>
-                            Elit quis labore dolor consectetur cillum do deserunt. Elit quis labore dolor consectetur cillum do deserunt. Elit quis labore dolor consectetur cillum do deserunt.
+                            Eu aliquip adipisicing do dolore labore irure commodo eu in exercitation sit elit.
                         </blockquote>
                         <h1>Heading 1</h1>
                         <h2>Heading 2</h2>
@@ -771,7 +775,7 @@
 
             <!-- Sticky Helper -->
             <div class="test-bar sticky" style="padding: 1rem;border: 1px solid #ccc;border-width: 1px 0;background: white;">
-                This is a sticky bar.
+                <p>This is a sticky bar.</p>
             </div>
 
             <!-- Forms -->
