updating readme, changing helper class syntax

--- a/index.html
+++ b/index.html
@@ -609,7 +609,7 @@
             </section>
 
             <!-- Social Sharing -->
-            <section class="page-section flush-top" id="section--sharing">
+            <section class="page-section flush--top" id="section--sharing">
                 <div class="container--small">
                     <h5 class="reset" id="section--tables">Page Sharing</h5>
                     <p>Page sharing is made simple with Bond: click a button, get your sharing options! It's that easy. Social account icons are automatically color coded based on the target URL. All swatches are exact and on-brand.</p>
@@ -735,7 +735,7 @@
             </section>
 
             <!-- Pagination -->
-            <section class="page-section flush-top" id="section--pagination">
+            <section class="page-section flush--top" id="section--pagination">
                 <div class="container--small">
                     <h5 class="reset">Pagination</h5>
                     <p>Need pagination? No problem. Would you prefer the classic numbered style or a lazy load style? With Bond, either is achieveable within minutes.</p>
@@ -776,7 +776,7 @@
             </section>
 
             <!-- Blocks -->
-            <section class="page-section flush-top" id="section--blocks">
+            <section class="page-section flush--top" id="section--blocks">
                 <div class="container--small">
                     <h5 class="reset">Blocks</h5>
                     <p>Bond's block layouts utilize the latest features of the CSS grid syntax. Easily create block grids with simple classes like 'three-up' or 'four-up'. Additionally, each block contains a stack of elements that suit news and blog grids perfectly such as excerpts, CTA's, tags, and more.</p>
@@ -837,7 +837,7 @@
             </section>
 
             <!-- Accordions -->
-            <section class="page-section flush-top" id="section--accordions">
+            <section class="page-section flush--top" id="section--accordions">
                 <div class="container--small">
                     <h5 class="reset">Accordions</h5>
                     <p>Rapidly create an FAQ section with Bond's built-in accordions!</p>
@@ -871,7 +871,7 @@
             </section>
 
             <!-- Tabs -->
-            <section class="page-section flush-top" id="section--tabs">
+            <section class="page-section flush--top" id="section--tabs">
                 <div class="container--small">
                     <h5 class="reset">Tabs</h5>
                     <br>
@@ -897,7 +897,7 @@
             </section>
 
             <!-- Partners List -->
-            <section class="page-section flush-top" id="section--partners">
+            <section class="page-section flush--top" id="section--partners">
                 <div class="container--small">
                     <h5 class="reset">Partner Groups</h5>
                     <p>Many websites require a method to display sponsors, partners or supporters. With Bond, it's as easy as including the Partners Group component.</p>
@@ -935,7 +935,7 @@
             </section>
 
             <!-- Breadcrumbs -->
-            <section class="page-section flush-top" id="section--breadcrumbs">
+            <section class="page-section flush--top" id="section--breadcrumbs">
                 <div class="container--small">
                     <h5 class="reset">Breadcrumbs</h5>
                     <p>Show your users exactly where they are with breadcrumbs. With Bond, there's no need to add separate HTML elements for dividers; it's built right into the default styling.</p>
@@ -949,7 +949,7 @@
             </section>
 
             <!-- Dialog Trigger -->
-            <section class="page-section flush-top" id="section--dialogs">
+            <section class="page-section flush--top" id="section--dialogs">
                 <div class="container--small">
                     <h5 class="reset">Dialogs and Modals</h5>
                     <p>Rapidly create confirmation modals, in-context forms, and more with Bond's dialog component.</p>
@@ -958,7 +958,7 @@
             </section>
 
             <!-- Photo Gallery -->
-            <section class="page-section flush-top" id="section--galleries">
+            <section class="page-section flush--top" id="section--galleries">
                 <div class="container--small">
                     <h5 class="reset">Photo Galleries</h5>
                     <p>Custom photo galleries are easy to implement with Bond. Clicking a thumbnail opens a pre-styled, full-screen gallery that supports multiple photo sizes and orientations with Slick carousel.</p>
@@ -1161,7 +1161,7 @@
             </section>
 
             <!-- Filters -->
-            <section class="page-section flush-top" id="section--filters">
+            <section class="page-section flush--top" id="section--filters">
                 <div class="container--medium">
                     <h4 class="filters__title reset--bottom">Filters</h4>
                     <p class="filters__content">The filters component utilizes Select2 for searchability and multi-select features.</p>
