--- a/starter.html
+++ b/starter.html
@@ -425,7 +425,7 @@
             </section>
 
             <!-- Social Sharing -->
-            <section class="page-section text-center flush-top">
+            <section class="page-section text-center flush--top">
                 <div class="container--medium">
                     <a href="#" class="social-sharing__trigger button--basic">Share This Page</a>
                     <ul class="social-sharing__list">
@@ -523,7 +523,7 @@
             </section>
 
             <!-- Pagination -->
-            <section class="page-section flush-top text-center">
+            <section class="page-section flush--top text-center">
                 <div class="container--small">
                     <!-- Pagination: Basic -->
                     <div class="pagination--basic">
@@ -561,7 +561,7 @@
             </section>
 
             <!-- Blocks -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--xl">
                     <div class="blocks__group three-up stretch">
                         <article class="block">
@@ -618,7 +618,7 @@
             </section>
 
             <!-- Accordions -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--small">
                     <ul class="accordions">
                         <li class="accordions__item">
@@ -650,7 +650,7 @@
             </section>
 
             <!-- Tabs -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--small">
                     <ul class="tabs--overlap">
                         <li class="tabs__tab-item">
@@ -682,7 +682,7 @@
             </section>
 
             <!-- Partners List -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--medium">
                     <div class="partners__group">
                         <h4 class="partners__group-title">Partner Group 1</h4>
@@ -716,7 +716,7 @@
             </section>
 
             <!-- Breadcrumbs -->
-            <section class="page-section flush-top text-center">
+            <section class="page-section flush--top text-center">
                 <div class="container--medium">
                     <ul class="breadcrumbs">
                         <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Home</a></li>
@@ -730,14 +730,14 @@
             </section>
 
             <!-- Dialog Trigger -->
-            <section class="page-section flush-top text-center">
+            <section class="page-section flush--top text-center">
                 <div class="container--medium">
                     <a href="#" class="dialog__trigger button--basic" data-dialog="dialog-1">Open Dialog</a>
                 </div>
             </section>
 
             <!-- Photo Gallery -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--xl">
                     <ul class="gallery">
                         <li class="gallery__item">
@@ -935,7 +935,7 @@
             </section>
 
             <!-- Filters -->
-            <section class="page-section flush-top">
+            <section class="page-section flush--top">
                 <div class="container--medium">
                     <h4 class="filters__title text-center">Filter Results</h4>
                     <form>
